@@ -5,6 +5,7 @@ BUGS:
 
 version 0.7.10 - Not released, available at https://svn.sourceforge.net/svnroot/simupop/trunk
   - BUG: fix a memory leak bug with LoadPopulation
+  - BUG: fix a newPopByIndID bug where keepAncestralPops is not respected.
   - NEW: nuclearFamilySampler operator and function
 
 version 0.7.9 - (Rev 885) Apr 3, 2007
